# relihttp

./: .gitignore  README-ZH.md  README.md  blog-post.md  pyproject.toml
example/: init_client.py
relihttp/: __init__.py  __main__.py  async_client.py  client.py  exceotions.py  models.py  utils.py
relihttp/client/: AsyncClient.py  BaseClient.py  SyncClient.py  __init__.py
relihttp/policies/: base.py  circuit.py  idempotency.py  logger.py  rate_limit.py  retry.py  timeout.py  tracing.py
relihttp/transport/: __init__.py  aiohttp.py  async_base.py  base.py  requests.py
tests/: test_async_client.py  test_async_ratelimit.py  test_circuit.py  test_idempotency.py  test_ratelimit.py  test_smoke.py  test_tracing.py
